--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <header>
+<a href="/">WebStudio</a>
+<ul>
+    <li><a href="">Студия</a></li>
+    <li><a href="">Портфолио</a></li>
+    <li><a href="">Контакты</a></li>
+</ul>
 
+<ul>
+    <li>info@devstudio.com</li>
+    <li>+38 096 111 11 11</li>
+</ul>
     </header>
     <main>
 
