--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-<a href="/">WebStudio</a>
-<ul>
-    <li><a href="">Студия</a></li>
-    <li><a href="">Портфолио</a></li>
-    <li><a href="">Контакты</a></li>
-</ul>
+<nav>
+    <a href="/">WebStudio</a>
+    <ul>
+        <li><a href="">Студия</a></li>
+        <li><a href="">Портфолио</a></li>
+        <li><a href="">Контакты</a></li>
+    </ul>
+</nav>
 
 <ul>
     <li>info@devstudio.com</li>
