--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 </ul>
     </header>
     <main>
-
+<!-- Герой -->
+<section>
+    <h1>Эффективные решения для вашего бизнеса</h1>
+    <button type="button">Заказать услугу</button>
+</section>
     </main>
     <footer>
         
