--- a/index.html
+++ b/index.html
@@ -52,7 +52,21 @@
     </ul>
 </section>
 
-
+<!-- Деятельность студии -->
+<section>
+    <h2>Чем мы занимаемся</h2>
+    <ul>
+<li>
+    <img src="./images/box 1.jpg" alt="Рабочее место">
+</li>
+<li>
+    <img src="./images/box 2.jpg" alt="Человек с телефоно и ноутбуком">
+</li>
+<li>
+    <img src="./images/box 3.jpg" alt="Планшет в руках">
+</li>
+    </ul>
+</section>
     </main>
     <footer>
         
