--- a/index.html
+++ b/index.html
@@ -67,6 +67,33 @@
 </li>
     </ul>
 </section>
+
+<!-- Сотрудники студии -->
+<section>
+    <h2>Наша команда</h2>
+    <ul>
+        <li>
+            <img src="./images/team card 1.jpg" width="270" alt="Улыбающийся мужчина">
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+        </li>
+        <li>
+            <img src="./images/team card 2.jpg" width="270" alt="Улыбающаяся женщина">
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+        </li>
+        <li>
+            <img src="./images/team card 3.jpg" width="270" alt="Улыбающийся мужчина">
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/team card 4.jpg" width="270" alt="Улыбающийся мужчина">
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+        </li>
+    </ul>
+</section>
     </main>
     <footer>
         
