--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <h2>Чем мы занимаемся</h2>
     <ul>
 <li>
-    <img src="./images/box 1.jpg" alt="Рабочее место">
+    <img src="./images/box 1.jpg" width="370" alt="Рабочее место">
 </li>
 <li>
-    <img src="./images/box 2.jpg" alt="Человек с телефоно и ноутбуком">
+    <img src="./images/box 2.jpg" width="370" alt="Человек с телефоно и ноутбуком">
 </li>
 <li>
-    <img src="./images/box 3.jpg" alt="Планшет в руках">
+    <img src="./images/box 3.jpg" width="370" alt="Планшет в руках">
 </li>
     </ul>
 </section>
