--- a/index.html
+++ b/index.html
@@ -95,8 +95,16 @@
     </ul>
 </section>
     </main>
+    <!-- Подвал страницы -->
     <footer>
-        
+        <a href="./index.html">WebStudio</a>
+        <address>
+        г. Киев, пр-т Леси Украинки, 26
+        </address>
+        <ul>
+           <li><a href="">info@example.com</a></li>
+           <li><a href="">+38 099 111 11 11</a></li>
+        </ul>
     </footer>
 </body>
 </html>
