--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <h2>Чем мы занимаемся</h2>
     <ul>
 <li>
-    <img src="./images/box 1.jpg" width="370" alt="Рабочее место">
+    <img src="./images/box1.jpg" width="370" alt="Рабочее место">
 </li>
 <li>
-    <img src="./images/box 2.jpg" width="370" alt="Человек с телефоно и ноутбуком">
+    <img src="./images/box2.jpg" width="370" alt="Человек с телефоно и ноутбуком">
 </li>
 <li>
-    <img src="./images/box 3.jpg" width="370" alt="Планшет в руках">
+    <img src="./images/box3.jpg" width="370" alt="Планшет в руках">
 </li>
     </ul>
 </section>
@@ -73,22 +73,22 @@
     <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="./images/team card 1.jpg" width="270" alt="Улыбающийся мужчина">
+            <img src="./images/team.card1.jpg" width="270" alt="Улыбающийся мужчина">
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/team card 2.jpg" width="270" alt="Улыбающаяся женщина">
+            <img src="./images/team.card2.jpg" width="270" alt="Улыбающаяся женщина">
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/team card 3.jpg" width="270" alt="Улыбающийся мужчина">
+            <img src="./images/team.card3.jpg" width="270" alt="Улыбающийся мужчина">
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/team card 4.jpg" width="270" alt="Улыбающийся мужчина">
+            <img src="./images/team.card4.jpg" width="270" alt="Улыбающийся мужчина">
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
         </li>
