--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         <li><a href="">Контакты</a></li>
     </ul>
 </nav>
-
 <ul>
-    <li><a href=""> info@devstudio.com</a></li>
-    <li><a href="">+38 096 111 11 11</a></li>
+    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
 </ul>
     </header>
     <main>
@@ -60,7 +59,7 @@
     <img src="./images/box1.jpg" width="370" alt="Рабочее место">
 </li>
 <li>
-    <img src="./images/box2.jpg" width="370" alt="Человек с телефоно и ноутбуком">
+    <img src="./images/box2.jpg" width="370" alt="Человек с телефоном и ноутбуком">
 </li>
 <li>
     <img src="./images/box3.jpg" width="370" alt="Планшет в руках">
@@ -102,8 +101,8 @@
         г. Киев, пр-т Леси Украинки, 26
         </address>
         <ul>
-           <li><a href="">info@example.com</a></li>
-           <li><a href="">+38 099 111 11 11</a></li>
+           <li><a href="mailto:info@devstudio.co">info@example.com</a></li>
+           <li><a href="tel:+38 096 111 11 11">+38 099 111 11 11</a></li>
         </ul>
     </footer>
 </body>
